FEAT: add post store and getting data
